<resources>
    <string name="app_name" translatable="false">Paw Rescue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Main Menu</string>
    <string name="title_notifications">Settings</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title" translatable="false">PAW RESCUE</string>
    <string name="mail_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="remember">Remember me</string>
    <string name="account_prompt">Don\'t you have an account?</string>
    <string name="account_prompt2">Already have an account?</string>
    <string name="accept">I accept the</string>
    <string name="empty_field">Please fill in all fields</string>
    <string name="empty_image">Please select an image</string>
    <string name="wrong_password">Passwords do not match</string>
    <string name="accept_term_condition">Please accept the terms and conditions</string>
    <string name="no_account">There is no such account</string>
    <string name="quote">When I look into the eyes of an animal I do not see an animal. I see a living being. I see a friend. I feel a soul.</string>
    <string name="author">A. D. Williams</string>
    <string name="donate_btn">DONATE NOW</string>
    <string name="donation">Donation</string>
    <string name="donation_title">MAKE DONATION</string>
    <string name="donation_btn">MAKE\nDONATION</string>
    <string name="donation_amount_hint">Donation Amount</string>
    <string name="donation_description">Enter the donation amount:</string>
    <string name="credit_card">Enter the card number:</string>
    <string name="phone_number">Enter the phone number:</string>
    <string name="cvv" translatable="false">CVV:</string>
    <string name="expiration">Expiration date:</string>
    <string name="card_hint">Card Number</string>
    <string name="code">Confirmation Code: </string>
    <string name="confirmation_title">Confirmation Code</string>
    <string name="confirmation">Please enter the confirmation code</string>
    <string name="phone_hint" translatable="false">(5 _ _) _ _ _ _ _ _ _</string>
    <string name="cvv_hint" translatable="false">CVV</string>
    <string name="exp_hint">Expiration Date</string>
    <string name="account_already_exists">This account already exists, please Sign In</string>
    <string name="addPet_btn1">ADD PAW\nPLATFORM</string>
    <string name="addPet_btn2">ADD PAW</string>
    <string name="addPet">Add Paw</string>
    <string name="addPet_title">ADD PAW</string>
    <string name="name_pet_hint">Name</string>
    <string name="type_hint">Type</string>
    <string name="age_hint">Age</string>
    <string name="gender_hint">Gender</string>
    <string name="state_hint">State</string>
    <string name="menu">MAIN MENU</string>
    <string name="displayPet_btn">ADOPT\nPAW</string>
    <string name="adoptPet_title">Adopt Paw</string>
    <string name="select_type">Select Type:</string>
    <string name="select_age">Select Age:</string>
    <string name="select_gender">Select Gender:</string>
    <string name="All">All</string>
    <string name="Dog">Dog</string>
    <string name="Cat">Cat</string>
    <string name="Select">Select</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="alertDiagramBoldText">Thank you for adopting one of the cute paws, we are waiting for you to rescue the paw as soon as possible.</string>
    <string name="alertDiagramAddressText">Address: AYBU Etlik Milli İrade Building, Ayvali District. Gaza Street. No: 7 B-Blok No:809-813 06010 Etlik, Keçiören, Ankara</string>
    <string name="type">Type:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="state">State:</string>
    <string name="select_img">Select Image</string>
    <string name="data">data</string>
    <string name="pet_saved">Pet information saved successfully</string>
    <string name="pet_do_not_saved">Failed to save pet information</string>
    <string name="cam_permission">Camera permission is required to take a photo</string>
    <string name="gallery_permission">Gallery permission is required to select a photo</string>
    <string name="emergency_call">EMERGENCY\nCALL</string>
    <string name="help">NEED HELP?</string>
    <string name="profile">Profile</string>
    <string name="title_profile">PROFILE</string>
    <string name="valid_date">Please enter a valid date format (MM/YYYY)</string>
    <string name="valid_cvv">Please enter a valid CVV format (3 digits)</string>
    <string name="valid_phone">Please enter a valid phone number format (10 digits)</string>
    <string name="valid_card_number">Please enter a valid card number format (16 digits)</string>
    <string name="valid_state">Please enter a non-digit input</string>
    <string name="time">Remaining Time: </string>
    <string name="time_up">Time is up!</string>
    <string name="approve">Approve</string>
    <string name="thank">Thanks for your donation :)</string>
    <string name="wrong_code">The confirmation code is incorrect, please try again!</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="lost">LOST AND\nFOUND\nPLATFORM</string>
    <string name="fact">GIVE DAILY\nFACTS</string>
    <string name="daily_fact">DAILY FACTS</string>
    <string name="give_fact">GIVE FACT</string>
    <string name="dog">DOG:\u0020</string>
    <string name="cat">CAT:\u0020</string>
    <string name="valid_password">Please enter a valid password format (4 digits)</string>
    <string name="connection">Please check your network connection!</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="logOut">LOG OUT</string>
    <string name="title_activity_lost_found_platform">Lost&amp;Found Platform</string>
    <string name="tab_text_1">LOST</string>
    <string name="tab_text_2">FOUND</string>
    <string name="lost_pet">LOST PET</string>
    <string name="mail_text">E-mail: </string>
    <string name="password_text">Password: </string>
    <string name="name_text">Username: </string>
    <string name="language_preferences">Language Preferences: </string>
    <string name="Turkish">Turkish</string>
    <string name="English">English</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size:</string>
    <string name="font_text">This is an example text.</string>
    <string name="accountSettings">ACCOUNT SETTINGS</string>
    <string name="communication">Contact will be established with you through the following number: </string>
    <string name="add">ADD</string>
    <string name="valid_age">Pet age must be a valid number</string>
    <string name="found_pet">I FOUND YOUR PET!</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="new_password">New Password</string>
    <string name="term_condition">terms and conditions</string>
    <string name="terms_text">1. Acceptance of Terms\n
                By accessing or using this application, you agree to be bound by these Terms and Conditions. If you do not agree with any part of these terms, you may not use the application.\n\n
                2. Use of the Application\n
                You agree to use this application for lawful purposes only and in a manner consistent with all applicable laws and regulations.\n\n
                3. User Accounts\n
                To access certain features of the application, you may be required to create a user account. You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account.\n\n
                4. Privacy Policy\n
                Your use of this application is also governed by our Privacy Policy, which can be found at [Privacy Policy URL]. By using the application, you consent to the terms of the Privacy Policy.\n\n
                5. Changes to Terms\n
                We reserve the right to update or change these Terms and Conditions at any time. Your continued use of the application after any such modifications shall constitute your acceptance of these revised terms.\n\n
                6. Termination\n
                We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.\n\n
                By using this application, you agree to these Terms and Conditions. If you do not agree with any of these terms, please do not use the application.\n\n</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="accept_term">ACCEPT</string>


</resources>