<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1BEE7"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:background="#FFFFFF"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail_hint"
        android:background="#FFFFFF"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="#FFFFFF"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="#FFFFFF"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"/>

    <CheckBox
        android:id="@+id/checkBoxTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_condition"
        android:textColor="#FFFFFF"
        android:layout_below="@id/editTextConfirmPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textColor="#FFFFFF"
        android:layout_below="@id/checkBoxTerms"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="#B027A2"
        android:textColor="#FFFFFF"
        android:layout_below="@id/checkBoxRememberMe"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textViewSignInPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_prompt2"
        android:textColor="#FFFFFF"
        android:layout_below="@id/buttonSignUp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="#B027A2"
        android:textColor="#FFFFFF"
        android:layout_below="@id/textViewSignInPrompt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
