<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00CED1"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:background="#FFFFFF"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="#FFFFFF"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:textColor="#FFFFFF"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textColor="#FFFFFF"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="#FFFFFF"
        android:textColor="#00CED1"
        android:layout_below="@id/checkBoxRememberMe"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/textViewSignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_prompt"
        android:textColor="#FFFFFF"
        android:layout_below="@id/buttonSignIn"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="#FFFFFF"
        android:textColor="#00CED1"
        android:layout_below="@id/textViewSignUpPrompt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
