<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_menu.MainMenuFragment">

    <TextView
        android:id="@+id/textViewMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/menu"
        android:textColor="#B983C3"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/buttonAddPet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddPet"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/btn_background"
        android:text="@string/addPet_btn1"
        android:textColor="#806285"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDisplayPet"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/displayPet_btn"
        android:textColor="#806285"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_background"
        android:text="@string/lost"
        android:textColor="#806285"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddPet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_emergency"
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/emergency_call"
        android:textColor="#806285"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDisplayPet" />

</androidx.constraintlayout.widget.ConstraintLayout>
